--- a/WDLesson2_3Practical/style.css
+++ b/WDLesson2_3Practical/style.css
@@ -36,7 +36,7 @@
                 3) color of the background to rgb(0,0,255)  
                 4) color of the text to white for the  white
 */
-  #main{
+  #main_container{
     font-size: 24pt;
     font-family: Arial, Helvetica, sans-serif;
     background-color: blue;
