--- a/WDLesson2_3Practical/style.css
+++ b/WDLesson2_3Practical/style.css
@@ -1,6 +1,6 @@
  
 /* Challenge 4: Change the radius of the borders of all images to 20px */
-  image{
+  img{
     border-radius: 20px;
   }
 /* Challenge 5: Change the width of the image with an id of "banner" to 95% */
