--- a/WDLesson2_6Practical/style.css
+++ b/WDLesson2_6Practical/style.css
@@ -10,13 +10,31 @@ nav a{
 }
 
 /* Challenge 7: Make the font for all elements Arial */
+body{
+  font-family: Arial;
 
+}
 /* Challenge 8: Remove the underline for all hyperlinks */
+a{
+  text-decoration: none;
+}
 
 /* Challenge 9: Change the bottom border of the hyperlinks in the <nav> element to 2px solid black when the visitor hovers over it */
+nav a:hover {
+    border-bottom: 2px solid black;
+}
 
 /* Challenge 10: Change the background color to blue and the text to white for elements with an class of "banner" */
+.banner {
+  background-color: aquamarine;
+  color: white;
+}
 
 /* Challenge 11: Make the font size bigger and the color of the text to blue for elements with a class of "main" */
+.main {
+  font-size: large; /* You can also use pixel values like 20px, or relative values like 1.5em or 150% */
+  color: wheat; /* You can also use a hex code like #0000ff */
+}
+
 
 
