--- a/WDLesson2_6Practical/style.css
+++ b/WDLesson2_6Practical/style.css
@@ -27,7 +27,7 @@ nav a:hover {
 /* Challenge 10: Change the background color to blue and the text to white for elements with an class of "banner" */
 .banner {
   background-color: aquamarine;
-  color: white;
+  color: blue;
 }
 
 /* Challenge 11: Make the font size bigger and the color of the text to blue for elements with a class of "main" */
